--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,22 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/buttonPanelRecycler"
+        android:id="@+id/btnRecycler"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="28dp"/>
+        android:layout_marginEnd="28dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsRecycler"
         android:layout_width="match_parent"
         android:layout_height="545dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPanelRecycler"
+        app:layout_constraintTop_toBottomOf="@+id/btnRecycler"
         android:layout_marginTop="32dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="115dp"
